# sqlite2csv

./: flake.nix  pyproject.toml
src/sqlite2csv/: __init__.py  __main__.py  sqlite2csv.py
tests/: test_sqlite2csv.py
